# anomatic

./: .gitignore  README.md  pyproject.toml
anarchomatic_manager/: __init__.py  main.py
anomatic/: cli.py  get_file_path.py  get_next_folder_name.py  save_simulation_data.py  to_tidy.py
anomatic_manager/: __init__.py  cli.py  get_file_path.py  get_next_folder_name.py  save_simulation_data.py
output/: data.csv  raster-2.json  raster.json
tests/: test_get_file_path.py  test_get_next_folder_name.py  test_save_simulation_data.py  test_to_tidy.py
