[project]
name = "anarchomatic_manager"
version = "0.1.0"
authors = [{ name = "Eoin", email = "me@eoinmurray.info" }]
description = "A personal manager tool for simulations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anarchomatic_manager"]

